fixed overflow bug on slider

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -359,6 +359,7 @@ footer > p {
     gap: 1rem;
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .portfolio-card,
